k8/loganminaudo-website-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: force-https
spec:
  redirectScheme:
    scheme: https
    permanent: true
