k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loganminaudo-website-dev
  labels:
    app: loganminaudo-website-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loganminaudo-website-dev
  template:
    metadata:
      labels:
        app: loganminaudo-website-dev
    spec:
      # Add this so K8s can pull from your Docker Hub if it's private
      imagePullSecrets:
        - name: dockerhub-conf-dev
      containers:
        - name: loganminaudo-website-dev
          image: loganminaudo/loganminaudo-website:dev-8f30c713e20297edc38e1a257fc9e92930f75867
          # This tells K8s to always check for a new image even if the tag is the same
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
