k8/loganminaudo-website-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loganminaudo-dev-website-service
spec:
  selector:
    app: loganminaudo-website-dev
  ports:
    - protocol: TCP
      port: 80        # The port Traefik will talk to
      targetPort: 80  # The port inside your Docker container
