k8/loganminaudo-website-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loganminaudo-dev-website-tls
spec:
  entryPoints:
    - websecure  # Port 443
  routes:
    - match: Host(`dev.loganminaudo.com`)
      kind: Rule
      services:
        - name: loganminaudo-dev-website-service
          port: 80
  tls:
    certResolver: myresolver # The name of your Let's Encrypt resolver in Traefik

---
# 2. The Redirect Route (Port 80)
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: loganminaudo-dev-website-http
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dev.loganminaudo.com`)
      kind: Rule
      services:
        - name: loganminaudo-dev-website-service
          port: 80
      # THIS IS WHERE YOU USE THE MIDDLEWARE:
      middlewares:
        - name: force-https
